--- a/graph-viz/conf/application.conf
+++ b/graph-viz/conf/application.conf
@@ -4,3 +4,7 @@ db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost:5432/graphtweet"
 db.default.username="graphuser"
 db.default.password="graphuser"
+
+play.filters.hosts {
+  allowed = ["."]
+}
