fix undefined bug

--- a/graph-viz/conf/application.conf
+++ b/graph-viz/conf/application.conf
@@ -4,3 +4,5 @@ db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost:5432/graphtweet"
 db.default.username="graphuser"
 db.default.password="graphuser"
+
+play.http.secret.key="cloudberry@ics.uci.edu"
