finish all ikmeans and kmeans

--- a/graph-viz/conf/application.conf
+++ b/graph-viz/conf/application.conf
@@ -6,3 +6,7 @@ db.default.username="graphuser"
 db.default.password="graphuser"
 
 play.http.secret.key="cloudberry@ics.uci.edu"
+
+play.filters.hosts {
+    allowed = ["."]
+}
