--- a/graph-viz/conf/config.properties
+++ b/graph-viz/conf/config.properties
@@ -1,4 +1,4 @@
-# settings for start and end date
+# settings for start and end date of the incremental query
 firstDate=20151116000000
 lastDate=20190430000000
 queryPeriod=720
